y.output
Terminals unused in grammar

   BREAK
   DOT
   QM
   NOT
   OR
   MOD
   DAND
   DOR


State 72 conflicts: 1 shift/reduce
State 91 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: declist funclist
    2        | funclist

    3 declist: declist declstmt
    4        | declstmt

    5 declstmt: INT intid assign COMMA intid assign SEMICOLON
    6         | INT intid assign SEMICOLON
    7         | CHAR cid assign COMMA cid assign SEMICOLON
    8         | CHAR cid assign SEMICOLON
    9         | declarray

   10 intid: ID

   11 cid: ID

   12 assign: ASSIGN expr
   13       | %empty

   14 funclist: funclist funcdecl
   15         | funcdecl

   16 funcdecl: INT ifid INT intid COMMA INT intid RPAREN compstmt
   17         | INT ifid INT intid RPAREN compstmt
   18         | INT ifid RPAREN compstmt
   19         | VOID vfid INT intid COMMA INT intid RPAREN compstmt
   20         | VOID vfid LPAREN INT intid RPAREN compstmt
   21         | VOID vfid LPAREN RPAREN compstmt

   22 ifid: ID LPAREN

   23 vfid: ID LPAREN

   24 compstmt: block_start stmtlist block_end

   25 block_start: LBRACE

   26 block_end: RBRACE

   27 stmtlist: stmtlist stmt
   28         | stmt

   29 stmt: declaration
   30     | funcall
   31     | whilestmt
   32     | ifstmt
   33     | returnstmt
   34     | printstmt
   35     | scanstmt
   36     | expr
   37     | SEMICOLON

   38 declaration: INT intid assign COMMA intid assign SEMICOLON
   39            | INT intid assign SEMICOLON
   40            | CHAR cid assign COMMA cid assign SEMICOLON
   41            | CHAR cid assign SEMICOLON
   42            | declarray

   43 funcall: fc expr COMMA expr RPAREN SEMICOLON
   44        | fc expr RPAREN SEMICOLON
   45        | fc RPAREN SEMICOLON

   46 fc: ID LPAREN

   47 whilestmt: WHILE LPAREN expr RPAREN compstmt
   48          | WHILE LPAREN expr RPAREN stmt

   49 ifstmt: IF LPAREN expr RPAREN compstmt
   50       | IF LPAREN expr RPAREN compstmt ELSE compstmt
   51       | IF LPAREN expr RPAREN stmt

   52 returnstmt: RETURN expr SEMICOLON
   53           | RETURN SEMICOLON

   54 printstmt: PRINTF LPAREN STRINGLIT RPAREN SEMICOLON
   55          | PRINTF LPAREN STRINGLIT COMMA ID RPAREN SEMICOLON
   56          | PRINTF LPAREN STRINGLIT COMMA ID COMMA ID RPAREN SEMICOLON

   57 scanstmt: SCANF LPAREN STRINGLIT RPAREN SEMICOLON
   58         | SCANF LPAREN STRINGLIT COMMA AND ID RPAREN SEMICOLON
   59         | SCANF LPAREN STRINGLIT COMMA AND ID COMMA AND ID RPAREN SEMICOLON

   60 expr: identifier
   61     | NUM
   62     | identifier ASSIGN expr
   63     | identifier ASSIGN funcall
   64     | arrid expr RSQ
   65     | arrid expr RSQ ASSIGN expr
   66     | arrid expr RSQ ASSIGN funcall
   67     | expr ADD expr
   68     | expr SUB expr
   69     | expr MUL expr
   70     | expr DIV expr
   71     | expr GEQ expr
   72     | expr LEQ expr
   73     | expr GT expr
   74     | expr LT expr
   75     | expr ISEQ expr
   76     | expr NEQ expr
   77     | LPAREN expr RPAREN
   78     | SUB expr

   79 identifier: ID

   80 arrid: ID LSQ

   81 declarray: INT ID LSQ NUM RSQ SEMICOLON


Terminals, with rules where they appear

$end (0) 0
error (256)
ID (258) 10 11 22 23 46 55 56 58 59 79 80 81
NUM (259) 61 81
STRINGLIT (260) 54 55 56 57 58 59
INT (261) 5 6 16 17 18 19 20 38 39 81
VOID (262) 19 20 21
CHAR (263) 7 8 40 41
UMINUS (264)
IF (265) 49 50 51
ELSE (266) 50
WHILE (267) 47 48
BREAK (268)
SCANF (269) 57 58 59
PRINTF (270) 54 55 56
RETURN (271) 52 53
LBRACE (272) 25
RBRACE (273) 26
LPAREN (274) 20 21 22 23 46 47 48 49 50 51 54 55 56 57 58 59 77
RPAREN (275) 16 17 18 19 20 21 43 44 45 47 48 49 50 51 54 55 56 57
    58 59 77
SEMICOLON (276) 5 6 7 8 37 38 39 40 41 43 44 45 52 53 54 55 56 57 58
    59 81
COMMA (277) 5 7 16 19 38 40 43 55 56 58 59
DOT (278)
LSQ (279) 80 81
RSQ (280) 64 65 66 81
QM (281)
AND (282) 58 59
NOT (283)
OR (284)
ADD (285) 67
SUB (286) 68 78
MUL (287) 69
DIV (288) 70
MOD (289)
ASSIGN (290) 12 62 63 65 66
ISEQ (291) 75
GT (292) 73
LT (293) 74
GEQ (294) 71
LEQ (295) 72
DAND (296)
DOR (297)
NEQ (298) 76


Nonterminals, with rules where they appear

$accept (44)
    on left: 0
program (45)
    on left: 1 2, on right: 0
declist (46)
    on left: 3 4, on right: 1 3
declstmt (47)
    on left: 5 6 7 8 9, on right: 3 4
intid (48)
    on left: 10, on right: 5 6 16 17 19 20 38 39
cid (49)
    on left: 11, on right: 7 8 40 41
assign (50)
    on left: 12 13, on right: 5 6 7 8 38 39 40 41
funclist (51)
    on left: 14 15, on right: 1 2 14
funcdecl (52)
    on left: 16 17 18 19 20 21, on right: 14 15
ifid (53)
    on left: 22, on right: 16 17 18
vfid (54)
    on left: 23, on right: 19 20 21
compstmt (55)
    on left: 24, on right: 16 17 18 19 20 21 47 49 50
block_start (56)
    on left: 25, on right: 24
block_end (57)
    on left: 26, on right: 24
stmtlist (58)
    on left: 27 28, on right: 24 27
stmt (59)
    on left: 29 30 31 32 33 34 35 36 37, on right: 27 28 48 51
declaration (60)
    on left: 38 39 40 41 42, on right: 29
funcall (61)
    on left: 43 44 45, on right: 30 63 66
fc (62)
    on left: 46, on right: 43 44 45
whilestmt (63)
    on left: 47 48, on right: 31
ifstmt (64)
    on left: 49 50 51, on right: 32
returnstmt (65)
    on left: 52 53, on right: 33
printstmt (66)
    on left: 54 55 56, on right: 34
scanstmt (67)
    on left: 57 58 59, on right: 35
expr (68)
    on left: 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77
    78, on right: 12 36 43 44 47 48 49 50 51 52 62 64 65 66 67 68 69
    70 71 72 73 74 75 76 77 78
identifier (69)
    on left: 79, on right: 60 62 63
arrid (70)
    on left: 80, on right: 64 65 66
declarray (71)
    on left: 81, on right: 9 42


State 0

    0 $accept: . program $end

    INT   shift, and go to state 1
    VOID  shift, and go to state 2
    CHAR  shift, and go to state 3

    program    go to state 4
    declist    go to state 5
    declstmt   go to state 6
    funclist   go to state 7
    funcdecl   go to state 8
    declarray  go to state 9


State 1

    5 declstmt: INT . intid assign COMMA intid assign SEMICOLON
    6         | INT . intid assign SEMICOLON
   16 funcdecl: INT . ifid INT intid COMMA INT intid RPAREN compstmt
   17         | INT . ifid INT intid RPAREN compstmt
   18         | INT . ifid RPAREN compstmt
   81 declarray: INT . ID LSQ NUM RSQ SEMICOLON

    ID  shift, and go to state 10

    intid  go to state 11
    ifid   go to state 12


State 2

   19 funcdecl: VOID . vfid INT intid COMMA INT intid RPAREN compstmt
   20         | VOID . vfid LPAREN INT intid RPAREN compstmt
   21         | VOID . vfid LPAREN RPAREN compstmt

    ID  shift, and go to state 13

    vfid  go to state 14


State 3

    7 declstmt: CHAR . cid assign COMMA cid assign SEMICOLON
    8         | CHAR . cid assign SEMICOLON

    ID  shift, and go to state 15

    cid  go to state 16


State 4

    0 $accept: program . $end

    $end  shift, and go to state 17


State 5

    1 program: declist . funclist
    3 declist: declist . declstmt

    INT   shift, and go to state 1
    VOID  shift, and go to state 2
    CHAR  shift, and go to state 3

    declstmt   go to state 18
    funclist   go to state 19
    funcdecl   go to state 8
    declarray  go to state 9


State 6

    4 declist: declstmt .

    $default  reduce using rule 4 (declist)


State 7

    2 program: funclist .
   14 funclist: funclist . funcdecl

    INT   shift, and go to state 20
    VOID  shift, and go to state 2

    $default  reduce using rule 2 (program)

    funcdecl  go to state 21


State 8

   15 funclist: funcdecl .

    $default  reduce using rule 15 (funclist)


State 9

    9 declstmt: declarray .

    $default  reduce using rule 9 (declstmt)


State 10

   10 intid: ID .
   22 ifid: ID . LPAREN
   81 declarray: INT ID . LSQ NUM RSQ SEMICOLON

    LPAREN  shift, and go to state 22
    LSQ     shift, and go to state 23

    $default  reduce using rule 10 (intid)


State 11

    5 declstmt: INT intid . assign COMMA intid assign SEMICOLON
    6         | INT intid . assign SEMICOLON

    ASSIGN  shift, and go to state 24

    $default  reduce using rule 13 (assign)

    assign  go to state 25


State 12

   16 funcdecl: INT ifid . INT intid COMMA INT intid RPAREN compstmt
   17         | INT ifid . INT intid RPAREN compstmt
   18         | INT ifid . RPAREN compstmt

    INT     shift, and go to state 26
    RPAREN  shift, and go to state 27


State 13

   23 vfid: ID . LPAREN

    LPAREN  shift, and go to state 28


State 14

   19 funcdecl: VOID vfid . INT intid COMMA INT intid RPAREN compstmt
   20         | VOID vfid . LPAREN INT intid RPAREN compstmt
   21         | VOID vfid . LPAREN RPAREN compstmt

    INT     shift, and go to state 29
    LPAREN  shift, and go to state 30


State 15

   11 cid: ID .

    $default  reduce using rule 11 (cid)


State 16

    7 declstmt: CHAR cid . assign COMMA cid assign SEMICOLON
    8         | CHAR cid . assign SEMICOLON

    ASSIGN  shift, and go to state 24

    $default  reduce using rule 13 (assign)

    assign  go to state 31


State 17

    0 $accept: program $end .

    $default  accept


State 18

    3 declist: declist declstmt .

    $default  reduce using rule 3 (declist)


State 19

    1 program: declist funclist .
   14 funclist: funclist . funcdecl

    INT   shift, and go to state 20
    VOID  shift, and go to state 2

    $default  reduce using rule 1 (program)

    funcdecl  go to state 21


State 20

   16 funcdecl: INT . ifid INT intid COMMA INT intid RPAREN compstmt
   17         | INT . ifid INT intid RPAREN compstmt
   18         | INT . ifid RPAREN compstmt

    ID  shift, and go to state 32

    ifid  go to state 12


State 21

   14 funclist: funclist funcdecl .

    $default  reduce using rule 14 (funclist)


State 22

   22 ifid: ID LPAREN .

    $default  reduce using rule 22 (ifid)


State 23

   81 declarray: INT ID LSQ . NUM RSQ SEMICOLON

    NUM  shift, and go to state 33


State 24

   12 assign: ASSIGN . expr

    ID      shift, and go to state 34
    NUM     shift, and go to state 35
    LPAREN  shift, and go to state 36
    SUB     shift, and go to state 37

    expr        go to state 38
    identifier  go to state 39
    arrid       go to state 40


State 25

    5 declstmt: INT intid assign . COMMA intid assign SEMICOLON
    6         | INT intid assign . SEMICOLON

    SEMICOLON  shift, and go to state 41
    COMMA      shift, and go to state 42


State 26

   16 funcdecl: INT ifid INT . intid COMMA INT intid RPAREN compstmt
   17         | INT ifid INT . intid RPAREN compstmt

    ID  shift, and go to state 43

    intid  go to state 44


State 27

   18 funcdecl: INT ifid RPAREN . compstmt

    LBRACE  shift, and go to state 45

    compstmt     go to state 46
    block_start  go to state 47


State 28

   23 vfid: ID LPAREN .

    $default  reduce using rule 23 (vfid)


State 29

   19 funcdecl: VOID vfid INT . intid COMMA INT intid RPAREN compstmt

    ID  shift, and go to state 43

    intid  go to state 48


State 30

   20 funcdecl: VOID vfid LPAREN . INT intid RPAREN compstmt
   21         | VOID vfid LPAREN . RPAREN compstmt

    INT     shift, and go to state 49
    RPAREN  shift, and go to state 50


State 31

    7 declstmt: CHAR cid assign . COMMA cid assign SEMICOLON
    8         | CHAR cid assign . SEMICOLON

    SEMICOLON  shift, and go to state 51
    COMMA      shift, and go to state 52


State 32

   22 ifid: ID . LPAREN

    LPAREN  shift, and go to state 22


State 33

   81 declarray: INT ID LSQ NUM . RSQ SEMICOLON

    RSQ  shift, and go to state 53


State 34

   79 identifier: ID .
   80 arrid: ID . LSQ

    LSQ  shift, and go to state 54

    $default  reduce using rule 79 (identifier)


State 35

   61 expr: NUM .

    $default  reduce using rule 61 (expr)


State 36

   77 expr: LPAREN . expr RPAREN

    ID      shift, and go to state 34
    NUM     shift, and go to state 35
    LPAREN  shift, and go to state 36
    SUB     shift, and go to state 37

    expr        go to state 55
    identifier  go to state 39
    arrid       go to state 40


State 37

   78 expr: SUB . expr

    ID      shift, and go to state 34
    NUM     shift, and go to state 35
    LPAREN  shift, and go to state 36
    SUB     shift, and go to state 37

    expr        go to state 56
    identifier  go to state 39
    arrid       go to state 40


State 38

   12 assign: ASSIGN expr .
   67 expr: expr . ADD expr
   68     | expr . SUB expr
   69     | expr . MUL expr
   70     | expr . DIV expr
   71     | expr . GEQ expr
   72     | expr . LEQ expr
   73     | expr . GT expr
   74     | expr . LT expr
   75     | expr . ISEQ expr
   76     | expr . NEQ expr

    ADD   shift, and go to state 57
    SUB   shift, and go to state 58
    MUL   shift, and go to state 59
    DIV   shift, and go to state 60
    ISEQ  shift, and go to state 61
    GT    shift, and go to state 62
    LT    shift, and go to state 63
    GEQ   shift, and go to state 64
    LEQ   shift, and go to state 65
    NEQ   shift, and go to state 66

    $default  reduce using rule 12 (assign)


State 39

   60 expr: identifier .
   62     | identifier . ASSIGN expr
   63     | identifier . ASSIGN funcall

    ASSIGN  shift, and go to state 67

    $default  reduce using rule 60 (expr)


State 40

   64 expr: arrid . expr RSQ
   65     | arrid . expr RSQ ASSIGN expr
   66     | arrid . expr RSQ ASSIGN funcall

    ID      shift, and go to state 34
    NUM     shift, and go to state 35
    LPAREN  shift, and go to state 36
    SUB     shift, and go to state 37

    expr        go to state 68
    identifier  go to state 39
    arrid       go to state 40


State 41

    6 declstmt: INT intid assign SEMICOLON .

    $default  reduce using rule 6 (declstmt)


State 42

    5 declstmt: INT intid assign COMMA . intid assign SEMICOLON

    ID  shift, and go to state 43

    intid  go to state 69


State 43

   10 intid: ID .

    $default  reduce using rule 10 (intid)


State 44

   16 funcdecl: INT ifid INT intid . COMMA INT intid RPAREN compstmt
   17         | INT ifid INT intid . RPAREN compstmt

    RPAREN  shift, and go to state 70
    COMMA   shift, and go to state 71


State 45

   25 block_start: LBRACE .

    $default  reduce using rule 25 (block_start)


State 46

   18 funcdecl: INT ifid RPAREN compstmt .

    $default  reduce using rule 18 (funcdecl)


State 47

   24 compstmt: block_start . stmtlist block_end

    ID         shift, and go to state 72
    NUM        shift, and go to state 35
    INT        shift, and go to state 73
    CHAR       shift, and go to state 74
    IF         shift, and go to state 75
    WHILE      shift, and go to state 76
    SCANF      shift, and go to state 77
    PRINTF     shift, and go to state 78
    RETURN     shift, and go to state 79
    LPAREN     shift, and go to state 36
    SEMICOLON  shift, and go to state 80
    SUB        shift, and go to state 37

    stmtlist     go to state 81
    stmt         go to state 82
    declaration  go to state 83
    funcall      go to state 84
    fc           go to state 85
    whilestmt    go to state 86
    ifstmt       go to state 87
    returnstmt   go to state 88
    printstmt    go to state 89
    scanstmt     go to state 90
    expr         go to state 91
    identifier   go to state 39
    arrid        go to state 40
    declarray    go to state 92


State 48

   19 funcdecl: VOID vfid INT intid . COMMA INT intid RPAREN compstmt

    COMMA  shift, and go to state 93


State 49

   20 funcdecl: VOID vfid LPAREN INT . intid RPAREN compstmt

    ID  shift, and go to state 43

    intid  go to state 94


State 50

   21 funcdecl: VOID vfid LPAREN RPAREN . compstmt

    LBRACE  shift, and go to state 45

    compstmt     go to state 95
    block_start  go to state 47


State 51

    8 declstmt: CHAR cid assign SEMICOLON .

    $default  reduce using rule 8 (declstmt)


State 52

    7 declstmt: CHAR cid assign COMMA . cid assign SEMICOLON

    ID  shift, and go to state 15

    cid  go to state 96


State 53

   81 declarray: INT ID LSQ NUM RSQ . SEMICOLON

    SEMICOLON  shift, and go to state 97


State 54

   80 arrid: ID LSQ .

    $default  reduce using rule 80 (arrid)


State 55

   67 expr: expr . ADD expr
   68     | expr . SUB expr
   69     | expr . MUL expr
   70     | expr . DIV expr
   71     | expr . GEQ expr
   72     | expr . LEQ expr
   73     | expr . GT expr
   74     | expr . LT expr
   75     | expr . ISEQ expr
   76     | expr . NEQ expr
   77     | LPAREN expr . RPAREN

    RPAREN  shift, and go to state 98
    ADD     shift, and go to state 57
    SUB     shift, and go to state 58
    MUL     shift, and go to state 59
    DIV     shift, and go to state 60
    ISEQ    shift, and go to state 61
    GT      shift, and go to state 62
    LT      shift, and go to state 63
    GEQ     shift, and go to state 64
    LEQ     shift, and go to state 65
    NEQ     shift, and go to state 66


State 56

   67 expr: expr . ADD expr
   68     | expr . SUB expr
   69     | expr . MUL expr
   70     | expr . DIV expr
   71     | expr . GEQ expr
   72     | expr . LEQ expr
   73     | expr . GT expr
   74     | expr . LT expr
   75     | expr . ISEQ expr
   76     | expr . NEQ expr
   78     | SUB expr .

    $default  reduce using rule 78 (expr)


State 57

   67 expr: expr ADD . expr

    ID      shift, and go to state 34
    NUM     shift, and go to state 35
    LPAREN  shift, and go to state 36
    SUB     shift, and go to state 37

    expr        go to state 99
    identifier  go to state 39
    arrid       go to state 40


State 58

   68 expr: expr SUB . expr

    ID      shift, and go to state 34
    NUM     shift, and go to state 35
    LPAREN  shift, and go to state 36
    SUB     shift, and go to state 37

    expr        go to state 100
    identifier  go to state 39
    arrid       go to state 40


State 59

   69 expr: expr MUL . expr

    ID      shift, and go to state 34
    NUM     shift, and go to state 35
    LPAREN  shift, and go to state 36
    SUB     shift, and go to state 37

    expr        go to state 101
    identifier  go to state 39
    arrid       go to state 40


State 60

   70 expr: expr DIV . expr

    ID      shift, and go to state 34
    NUM     shift, and go to state 35
    LPAREN  shift, and go to state 36
    SUB     shift, and go to state 37

    expr        go to state 102
    identifier  go to state 39
    arrid       go to state 40


State 61

   75 expr: expr ISEQ . expr

    ID      shift, and go to state 34
    NUM     shift, and go to state 35
    LPAREN  shift, and go to state 36
    SUB     shift, and go to state 37

    expr        go to state 103
    identifier  go to state 39
    arrid       go to state 40


State 62

   73 expr: expr GT . expr

    ID      shift, and go to state 34
    NUM     shift, and go to state 35
    LPAREN  shift, and go to state 36
    SUB     shift, and go to state 37

    expr        go to state 104
    identifier  go to state 39
    arrid       go to state 40


State 63

   74 expr: expr LT . expr

    ID      shift, and go to state 34
    NUM     shift, and go to state 35
    LPAREN  shift, and go to state 36
    SUB     shift, and go to state 37

    expr        go to state 105
    identifier  go to state 39
    arrid       go to state 40


State 64

   71 expr: expr GEQ . expr

    ID      shift, and go to state 34
    NUM     shift, and go to state 35
    LPAREN  shift, and go to state 36
    SUB     shift, and go to state 37

    expr        go to state 106
    identifier  go to state 39
    arrid       go to state 40


State 65

   72 expr: expr LEQ . expr

    ID      shift, and go to state 34
    NUM     shift, and go to state 35
    LPAREN  shift, and go to state 36
    SUB     shift, and go to state 37

    expr        go to state 107
    identifier  go to state 39
    arrid       go to state 40


State 66

   76 expr: expr NEQ . expr

    ID      shift, and go to state 34
    NUM     shift, and go to state 35
    LPAREN  shift, and go to state 36
    SUB     shift, and go to state 37

    expr        go to state 108
    identifier  go to state 39
    arrid       go to state 40


State 67

   62 expr: identifier ASSIGN . expr
   63     | identifier ASSIGN . funcall

    ID      shift, and go to state 72
    NUM     shift, and go to state 35
    LPAREN  shift, and go to state 36
    SUB     shift, and go to state 37

    funcall     go to state 109
    fc          go to state 85
    expr        go to state 110
    identifier  go to state 39
    arrid       go to state 40


State 68

   64 expr: arrid expr . RSQ
   65     | arrid expr . RSQ ASSIGN expr
   66     | arrid expr . RSQ ASSIGN funcall
   67     | expr . ADD expr
   68     | expr . SUB expr
   69     | expr . MUL expr
   70     | expr . DIV expr
   71     | expr . GEQ expr
   72     | expr . LEQ expr
   73     | expr . GT expr
   74     | expr . LT expr
   75     | expr . ISEQ expr
   76     | expr . NEQ expr

    RSQ   shift, and go to state 111
    ADD   shift, and go to state 57
    SUB   shift, and go to state 58
    MUL   shift, and go to state 59
    DIV   shift, and go to state 60
    ISEQ  shift, and go to state 61
    GT    shift, and go to state 62
    LT    shift, and go to state 63
    GEQ   shift, and go to state 64
    LEQ   shift, and go to state 65
    NEQ   shift, and go to state 66


State 69

    5 declstmt: INT intid assign COMMA intid . assign SEMICOLON

    ASSIGN  shift, and go to state 24

    $default  reduce using rule 13 (assign)

    assign  go to state 112


State 70

   17 funcdecl: INT ifid INT intid RPAREN . compstmt

    LBRACE  shift, and go to state 45

    compstmt     go to state 113
    block_start  go to state 47


State 71

   16 funcdecl: INT ifid INT intid COMMA . INT intid RPAREN compstmt

    INT  shift, and go to state 114


State 72

   46 fc: ID . LPAREN
   79 identifier: ID .
   80 arrid: ID . LSQ

    LPAREN  shift, and go to state 115
    LSQ     shift, and go to state 54

    LPAREN    [reduce using rule 79 (identifier)]
    $default  reduce using rule 79 (identifier)


State 73

   38 declaration: INT . intid assign COMMA intid assign SEMICOLON
   39            | INT . intid assign SEMICOLON
   81 declarray: INT . ID LSQ NUM RSQ SEMICOLON

    ID  shift, and go to state 116

    intid  go to state 117


State 74

   40 declaration: CHAR . cid assign COMMA cid assign SEMICOLON
   41            | CHAR . cid assign SEMICOLON

    ID  shift, and go to state 15

    cid  go to state 118


State 75

   49 ifstmt: IF . LPAREN expr RPAREN compstmt
   50       | IF . LPAREN expr RPAREN compstmt ELSE compstmt
   51       | IF . LPAREN expr RPAREN stmt

    LPAREN  shift, and go to state 119


State 76

   47 whilestmt: WHILE . LPAREN expr RPAREN compstmt
   48          | WHILE . LPAREN expr RPAREN stmt

    LPAREN  shift, and go to state 120


State 77

   57 scanstmt: SCANF . LPAREN STRINGLIT RPAREN SEMICOLON
   58         | SCANF . LPAREN STRINGLIT COMMA AND ID RPAREN SEMICOLON
   59         | SCANF . LPAREN STRINGLIT COMMA AND ID COMMA AND ID RPAREN SEMICOLON

    LPAREN  shift, and go to state 121


State 78
